# gatenet

./: .editorconfig  .gitignore  .markdownlint.json  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml  bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  test-release.yml  test.yml
cli/: __main__.py  discover.py  format.py  scan.py
docs/: requirements.txt
docs/source/: advanced_radio_usage.rst  architecture.rst  cli.rst  cli_integration_examples.rst  client.rst  conf.py  coverage.rst  coverage_summary.rst  diagnostics.rst  diagonostics.rst  examples.rst  gatenet.cli.commands.rst  gatenet.cli.rst  gatenet.client.rst  gatenet.core.rst  gatenet.dashboard.rst  gatenet.diagnostics.rst  gatenet.discovery.rst  gatenet.hotspot.backends.rst  gatenet.hotspot.rst  gatenet.http.rst  gatenet.http_.rst  gatenet.mesh.rst  gatenet.radio.rst  gatenet.rst  gatenet.service_detectors.rst  gatenet.socket.rst  gatenet.utils.rst  gen_coverage_table.py  hardware_setup.rst  hotspot_usage.rst  http.rst  index.rst  modules.rst  sandbox.rst  security.rst  socket.rst  utils.rst
examples/: README.md
examples/cli/: hotspot_example.py
examples/dashboard/: extend_dashboard.py  launch_dashboard.py
examples/diagnostics/: bandwidth.py  dns_lookup.py  geo_info.py  ping.py  port_scanning.py  traceroute.py
examples/discovery/: bluetooth_discovery.py  mdns_discovery.py  ssdp_discovery.py  ssh_discovery.py
examples/hotspot/: basic_hotspot.py
examples/http/: async_client_usage.py  http_example.py
examples/http_/: http_example.py  http_server_example.py  timeout_retry.py
examples/tcp_udp/: polymorphism.py  tcp_echo_example.py  (+1 more)
scripts/: delete_empty_files.py
(+117 files in other folders)
